# Orienta.IA

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  bot.py  docker-compose.yml  main.py  pyproject.toml
Documentos/Modelagens Recebidas/: Modelo Inicial - D01.bpm
backend/config/: config.py
backend/core/: config.py  security.py
backend/database/: connection.py  init_db.py
backend/database/models/: refresh_token.py  return_schemas.py  schemas.py  user.py
backend/events/: register_events.py
backend/messages/handlers/: register.py  start.py
backend/routes/auth/: auth.py  auth_admin.py
backend/utils/: telegram_state_utils.py  user_utils.py
