[project]
name = "Orienta.IA"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "brutils>=2.4.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "limits>=5.8.0",
    "numpy>=2.4.4",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "tgcrypto>=1.2.5",
    "uvicorn[standard]>=0.46.0",
]
